<resources>
    <string name="app_name">C A L I S</string>
    <string name="login_with_google">Login dengan Google</string>
    <string name="splash_name">C A L I S</string>

    <string name="with_sign_in">LOGIN DENGAN GOOGLE</string>
    <string name="without_sign_in">MASUK TANPA LOGIN</string>

    <string name="dasar">DASAR</string>
    <string name="menengah">MENENGAH</string>
    <string name="lanjut">LANJUT</string>

    <string name="subscription">Menu Subscription</string>
    <string name="user">Menu Profile</string>
    <string name="backward">Menu Backward</string>
    <string name="settings">Menu Settings</string>
    <string name="report">Menu Progress</string>
    <string name="library">Menu Library</string>
    <string name="level">Level Pembelajaran</string>


    <string name="a">a</string>
    <string name="A">A</string>
    <string name="b">b</string>
    <string name="B">B</string>
    <string name="c">c</string>
    <string name="C">c</string>
    <string name="d">c</string>
    <string name="D">c</string>
    <string name="e">c</string>
    <string name="E">c</string>

    <string name="jumlah">2 + 3</string>

    <string name="TR">TR</string>

    <string name="BACA">BACA</string>
    <string name="id">ID</string>

    <string name="sound_recognition">Sound Recognation</string>

    <string name="membaca">MEMBACA</string>
    <string name="menulis">MENULIS</string>
    <string name="menghitung">MENGHITUNG</string>
    <string name="progress">PROGRES</string>
    <string name="pengayaan">PENGAYAAN</string>
    <string name="login_note">Penggunaan aplikasi ini diatur oleh Persyaratan Layanan dan Kebijakan Privasi  !</string>

    <string name="API_error_header_token">Token anda telah habis, silahkan login kembali untuk memperbaharui token anda !</string>
    <string name="API_error_large_payload">Your image exceeds the maximum limit of 1 MB file, please change the image</string>

    <string name="add_data">TAMBAH PROFILE</string>
    <string name="renewtoken">PERBAHARUI TOKEN</string>
    <string name="signout">LOGOUT</string>
    <string name="areyousure">Apakah anda yakin ingin keluar ?</string>
    <string name="const_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="ok">OK</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="update">UPDATE PROFILE ANAK</string>
    <string name="update_title">UPDATE</string>
    <string name="update_subtitle">Perbaharuan profile anak berhasil dilakukan</string>
    <string name="delete">HAPUS PROFILE ANAK</string>

    <string name="description_1">Soal dalam materi pembelajaran ini memiliki tingkat kesulitan di level dasar</string>
    <string name="description_2">Soal dalam materi pembelajaran ini memiliki tingkat kesulitan di level menengah</string>
    <string name="description_3">Soal dalam materi pembelajaran ini memiliki tingkat kesulitan di level menengah</string>
    <string name="description_4">Soal dalam materi pembelajaran ini memiliki tingkat kesulitan di level sulit</string>
    <string name="description_5">Soal dalam materi pembelajaran ini memiliki tingkat kesulitan di level expert</string>

    <string name="report_progress">Progres Belajar</string>
    <string name="report_name">Alexa Siri</string>
    <string name="report_materi">MATERI YANG PERLU DIBANTU</string>
    <string name="report_bantuan">a, b, H, J, G</string>
    <string name="report_waktu">WAKTU BELAJAR MINGGU INI</string>
    <string name="S">S</string>
    <string name="R">R</string>
    <string name="K">K</string>
    <string name="J">J</string>
    <string name="M">M</string>

    <string name="on">on</string>
    <string name="off">off</string>

    <string name="undo">Undo</string>
    <string name="save_signature">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="pen_width">Pen Width</string>

    <string name="const_text_name">Nama</string>
    <string name="const_text_age">Umur</string>
    <string name="const_text_email">Email</string>

    <string name="web_client_id">327782085729-eqlor5jbl9cv3c06b77np9ic8so0sl01.apps.googleusercontent.com</string>


    <string name="button">click button</string>
    <string name="dialogTitle">Hapus Profile</string>
    <string name="dialogMessage">Apakah anda yakin untuk menghapus profile anak ini ?</string>

</resources>