<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lesson_background"
        android:paddingVertical="10dp"
        android:layout_gravity="center_horizontal"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/lesson_image"
            android:transitionName="story_image"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_button_ripple_2"
            android:src="@drawable/baca"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/lesson_image"
            card_view:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/children_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:textColor="@color/frame1"
                android:textSize="25sp"
                android:textStyle="bold"
                android:transitionName="user_name"
                tools:text="@string/BACA" />

            <TextView
                android:id="@+id/children_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:textSize="16sp"
                android:textColor="#000"
                tools:text="@string/id" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>