<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="15dp"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lesson_background"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/lesson_image"
            android:transitionName="story_image"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:layout_width="70dp"
            android:layout_height="100dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/frame_lesson"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/lesson_image"
            card_view:layout_constraintTop_toTopOf="@+id/lesson_image">

            <TextView
                android:id="@+id/lesson_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/BACA"
                android:textColor="@color/frame1"
                android:textSize="16sp"
                android:textStyle="bold"
                android:transitionName="user_name" />

            <TextView
                android:id="@+id/lesson_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/dasar"
                android:textColor="@color/frame3"
                android:textSize="16sp"
                android:textStyle="bold"
                android:transitionName="user_name" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/lesson_image"
            card_view:layout_constraintTop_toBottomOf="@+id/frame_lesson" />

        <TextView
            android:id="@+id/lesson_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="6"
            android:textColor="#000"
            android:transitionName="story_upload_time"
            card_view:layout_constraintBottom_toBottomOf="@+id/lesson_image"
            card_view:layout_constraintStart_toEndOf="@+id/lesson_image"
            card_view:layout_constraintTop_toBottomOf="@+id/view"
            card_view:layout_constraintVertical_bias="0.0"
            tools:text="@string/id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>