<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    app:layoutDescription="@xml/activity_read_scene"
    tools:context=".ui.activity.dashboard.home.read.ReadActivity" >

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/palette1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <ImageView
        android:id="@+id/backward"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        android:padding="17dp"
        android:src="@drawable/backward"
        android:background="@drawable/menu1"
        app:layout_constraintTop_toTopOf="@id/horizontal1"
        app:layout_constraintStart_toStartOf="@id/vertical1"
        app:layout_constraintEnd_toEndOf="@id/vertical2"
        android:contentDescription="@string/backward" />

    <ImageView
        android:id="@+id/imageLevel1"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:src="@drawable/membaca_dasar"
        android:contentDescription="@string/dasar"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout1"
        app:layout_constraintEnd_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="325dp"
        android:layout_height="90dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dasar"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imageLevel2"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:src="@drawable/membaca_menengah"
        android:contentDescription="@string/menengah"
        app:layout_constraintBottom_toTopOf="@id/frameLayout2"
        app:layout_constraintStart_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="325dp"
        android:layout_height="90dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/menengah"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/imageLevel3"
        android:layout_width="325dp"
        android:layout_height="325dp"
        android:src="@drawable/membaca_lanjut"
        android:contentDescription="@string/lanjut"
        app:layout_constraintBottom_toTopOf="@id/frameLayout3"
        app:layout_constraintStart_toEndOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="325dp"
        android:layout_height="90dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lanjut"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </FrameLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>